# chrome_rag_agent

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/smart_search/: __init__.py  main.py
backend/src/smart_search/action/: highlighter.py  indexer.py  schemas.py
backend/src/smart_search/agent/: agent.py  executor.py  schemas.py
backend/src/smart_search/api/v1/: endpoints.py  health.py  schemas.py
backend/src/smart_search/core/: config.py  logging_config.py
backend/src/smart_search/decision/: ranker.py  schemas.py  searcher.py
backend/src/smart_search/embeddings/: embedding_generator.py  ollama_client.py  schemas.py
backend/src/smart_search/memory/: cache.py  metadata_store.py  schemas.py  vector_store.py
backend/src/smart_search/perception/: content_processor.py  page_extractor.py  schemas.py
backend/src/smart_search/utils/: exceptions.py  helpers.py
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js  style.css  styles.css
