[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-search-rag"
version = "1.0.0"
description = "Smart Page Search - Chrome Extension Backend with Agent Architecture"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Smart Search", email = "kushagarak1992@gmail.com"}]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.3",
    "faiss-cpu>=1.7.4",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smart_search"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
